@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-26
+2013-04-25 Andy Salnikov
+- upgrading to pdsdata V06-07-04
+- new class cspad.ConfigV5
+
 Tag: V00-04-25
 2013-04-23 Andy Salnikov
 - pnccd.FullFrameV1 does not need xtc-config
